got icons to cut off when browser shrinks, text aligned with icons - need fixed width between icons

--- a/css/style.css
+++ b/css/style.css
@@ -13,29 +13,45 @@ html {
   -webkit-font-smoothing: antialiased;
 }
 
+.content {
+/*  padding: 0 0.9em;
+  margin: 0 auto;*/
+  min-width: 37.5em;
+}
+
 /* Navigation Section */
 .top-navigation {
   background-color: #fff;
   position: fixed;
   width: 100%;
   z-index: 9999;
+/*  overflow: hidden;*/
 }
 
-.content {
-  width: 100%;
+.top-navigation> .content {
   height: 70px;
-  margin: 0 auto;
+/*  margin: 0 auto;*/
   padding: 0px 15px;
 }
 
-.top-navigation .links > .active {
+.top-navigation .logo {
+  height: 4.375em;
+}
+
+.links > .active {
   color: #4c5058;
   font-weight: 500;
 }
 
-.links {
+.top-navigation .links {
   float: right;
   letter-spacing: 0.03em;
+}
+
+.top-navigation .links > li {
+  display: inline-block;
+  margin-top: 10px;
+  margin-left: 20px;
 }
 
 .top-navigation .links > li:hover {
@@ -45,15 +61,7 @@ html {
   cursor: pointer;
 }
 
-.top-navigation .links > li {
-  display: inline-block;
-  margin-top: 10px;
-  margin-left: 20px;
-}
 
-.top-navigation .logo {
-  margin-top: 10px;
-}
 
 /* Background Section */
 
@@ -71,14 +79,15 @@ html {
   color: white;
 }
 
-.introduction .content > h1 {
+.content > h1 {
   margin-top: 17.5rem;
   font-size: 3.125rem;
 }
 
-.introduction .content > h3 {
+.content > h3 {
   margin-top: -1.2em;
   font-size: 1.563em;
+  text-align: center;
 }
 
 .big-button {
@@ -99,41 +108,57 @@ html {
 }
 
 /* Cases sections */
-.cases .content > h2 {
+
+.cases {
+  overflow: hidden;
+  padding-bottom: 3em;
+}
+
+.cases .content {
+  padding-bottom: 5em;
+  text-align: center;
+}
+
+.cases h2 {
   padding: 1em;
   font-size: 2.5em;
-  text-align: center;
   color: black;
+  margin: 1.625rem 0 3.125rem;
   margin-bottom: -2em;
 }
 
 .cases .devices > li {
-  width: 33%;
+  width: 33.3333333%;
   float: left;
   display: inline-block;
-  margin: 0 auto;
-  padding: 5em 5em;
+  margin-top: 5em;
 }
 
 .cases .devices h3 {
   color: black;
   font-weight: 400;
   font-size: 1.5em;
-  margin: 2.5em 0px 1.875em;
+  display: inline-block;
+  margin: 0 auto;
+  text-align: center;
 }
 
 /* Social section */
 .social {
-/*  padding: 5em 0;*/
   text-align: center;
+  display: block;
 }
 
 .social hr {
   border: 0;
-  width: 100%;
   height: 6px;
   border-top: 1px solid LightGray;
-  margin: 1em 0;
+  margin: 1em 2em;
+}
+
+.social h5 {
+  font-weight: 500;
+  font-size: 1em;
 }
 
 .icons {
